redactable/tests/ui/sensitive_union_rejected.rs
use redactable::Sensitive;

#[derive(Sensitive)]
union SecretUnion {
    value: u32,
}

fn main() {}
